# Small-Projects-Test-Code

.ccls-cache/@@home@cory@Code@Small Projects & Test Code/: @nix@store@5qjycalzb9sqzvqg65kf5zimqwjabm9g-gcc-10.3.0@include@c++@10.3.0@backward@binders.h.blob  @nix@store@5qjycalzb9sqzvqg65kf5zimqwjabm9g-gcc-10.3.0@include@c++@10.3.0@bits@alloc_traits.h.blob  @nix@store@5qjycalzb9sqzvqg65kf5zimqwjabm9g-gcc-10.3.0@include@c++@10.3.0@bits@allocator.h.blob  @nix@store@5qjycalzb9sqzvqg65kf5zimqwjabm9g-gcc-10.3.0@include@c++@10.3.0@bits@basic_string.h.blob  @nix@store@5qjycalzb9sqzvqg65kf5zimqwjabm9g-gcc-10.3.0@include@c++@10.3.0@bits@basic_string.tcc.blob  @nix@store@5qjycalzb9sqzvqg65kf5zimqwjabm9g-gcc-10.3.0@include@c++@10.3.0@bits@char_traits.h.blob  @nix@store@5qjycalzb9sqzvqg65kf5zimqwjabm9g-gcc-10.3.0@include@c++@10.3.0@bits@charconv.h.blob  @nix@store@5qjycalzb9sqzvqg65kf5zimqwjabm9g-gcc-10.3.0@include@c++@10.3.0@bits@concept_check.h.blob  @nix@store@5qjycalzb9sqzvqg65kf5zimqwjabm9g-gcc-10.3.0@include@c++@10.3.0@bits@cpp_type_traits.h.blob  @nix@store@5qjycalzb9sqzvqg65kf5zimqwjabm9g-gcc-10.3.0@include@c++@10.3.0@bits@exception.h.blob  (+142 more)
C++/todo_list/: .ccls  CMakeLists.txt  cmdarg.cpp  cmdarg.hpp  goal.cpp  goal.hpp  main.cpp
C++/todo_list/.cache/clangd/index/: cmdarg.cpp.412E590EF2206F95.idx  cmdarg.hpp.CCA6F855CB817645.idx  main.cpp.3098FD978DF30F6F.idx
C++/todo_list/.direnv/: flake-profile  flake-profile.rc
C++/todo_list/.direnv/flake-inputs/: qcj5wwhg34xpnr7k5gnf3ylavbzn956j-source  v7g142952hmz1ss1cpbp38n6xp6q28jk-source
Org/: first.org
Shell/: test_math.sh
(+261 files in other folders)
